--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   "author": "Marko Gresak <marko@gresak.io> (http://gresak.io/)",
   "license": "MIT",
   "devDependencies": {
-    "react": "^0.14.7",
-    "ts-loader": "^0.8.0",
-    "tsd": "^0.6.4",
-    "typescript": "^1.7.5",
-    "webpack": "^1.12.12",
-    "webpack-dev-server": "^1.10.1"
+    "react": "~0.14.7",
+    "ts-loader": "~0.8.0",
+    "tsd": "~0.6.4",
+    "typescript": "~1.7.5",
+    "webpack": "~1.12.12",
+    "webpack-dev-server": "~1.10.1"
   }
 }
